--- a/bml_project/blogs/templates/blogs/blog.html
+++ b/bml_project/blogs/templates/blogs/blog.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "blogs/base.html" %}
 {% block content %}
     <h2>{{ blog.title }}</h2>
     {% for post in posts %}
         <div class="card">
-            <header><h3><a href="{% url 'post' post.id %}">{{ post.title }}</a></h3></header>
+            <header><h3><a href="{% url 'blogs:post' post.id %}">{{ post.title }}</a></h3></header>
             <p>{{ post.date_added|date:"DATE_FORMAT"}}</p>
             <p>{{ post.body|truncatewords:10 }}</p>
         </div>
