--- a/bml_project/blogs/templates/blogs/blogs.html
+++ b/bml_project/blogs/templates/blogs/blogs.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "blogs/base.html" %}
 
 {% block content %}
     <h2>Blogs</h2>
 
     {% for blog in blogs %}
         <div class="card">
-            <head><h3><a href="{% url 'blog' blog.id %}">{{ blog.title }}</a></h3></head>
+            <head><h3><a href="{% url 'blogs:blog' blog.id %}">{{ blog.title }}</a></h3></head>
             <p>{{ blog.description }}</p>
         </div>
     {% empty %}
