--- a/bml_project/blogs/templates/blogs/index.html
+++ b/bml_project/blogs/templates/blogs/index.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "blogs/base.html" %}
 {% block content %}
     <div class="hero">
         <p><span class="title">BlogMaker Lite</span> lets you...</p>
         <p>Make a blog today...</p>
     </div>
-    <a class="button primary" href="{% url 'blogs' %}">See all blogs</a>
+    <a class="button primary" href="{% url 'blogs:blogs' %}">See all blogs</a>
 {% endblock content %}
