--- a/bml_project/blogs/templates/blogs/index.html
+++ b/bml_project/blogs/templates/blogs/index.html
@@ -1,8 +1,8 @@
 {% extends "blogs/base.html" %}
 {% block content %}
     <div class="hero">
-        <p><span class="title">BlogMaker Lite</span> lets you...</p>
-        <p>Make a blog today...</p>
+        <p><span class="title">BlogMaker Lite</span> lets you share your thoughts with the world.</p>
+        <p>Make a blog today, and let us know what you're thinking!</p>
     </div>
     <a class="button primary" href="{% url 'blogs:blogs' %}">See all blogs</a>
 {% endblock content %}
