--- a/bml_project/blogs/templates/blogs/base.html
+++ b/bml_project/blogs/templates/blogs/base.html
@@ -26,6 +26,7 @@
           </form>
         {% else %}
           <a href="{% url 'accounts:login' %}">Login in</a>
+          <a href="{% url 'accounts:register' %}">Register</a>
         {% endif %}
       </div>
     </nav>
